# fitness-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docker/oracle-init/: 01-create-app.sql
docs/: BOOTSTRAP_PROMPT.md  FitTrack-PRD-v1.0.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md
docs/adr/: 0001-oracle-json-duality-views.md  0002-fastapi.md  0003-no-orm.md  0004-tier-code-derivation.md
scripts/: reset_db.py  seed_data.py  wait_for_oracle.sh
src/fittrack/: __init__.py  config.py  main.py
src/fittrack/api/: dev.py  errors.py  pagination.py
src/fittrack/api/middleware/: request_id.py  security_headers.py
src/fittrack/api/v1/routes/: activities.py  connections.py  drawings.py  fulfillments.py  health.py  point_transactions.py  prizes.py  profiles.py  sponsors.py  tickets.py  users.py
src/fittrack/api/v1/schemas/: common.py  users.py
src/fittrack/database/: connection.py
src/fittrack/database/migrations/: 0001_core.sql  0002_views.sql  0003_audit.sql  __init__.py  __main__.py
src/fittrack/database/repositories/: __init__.py  activities_repo.py  connections_repo.py  drawings_repo.py  fulfillments_repo.py  point_transactions_repo.py  prizes_repo.py  profiles_repo.py  sponsors_repo.py  tickets_repo.py  users_repo.py
src/fittrack/domain/: age.py  enums.py  states.py  tier.py
src/fittrack/utils/: logging.py
static/dev/: test_page.html
tests/: conftest.py
tests/factories/: activity_factory.py  base.py  drawing_factory.py  profile_factory.py  sponsor_factory.py  user_factory.py
tests/integration/: conftest.py  test_migrations.py  test_users_repo.py
tests/unit/: test_age.py  test_dev_route.py  test_enums.py  test_errors.py  test_factories.py  test_health.py  test_logging.py  test_middleware.py  test_migrations.py  test_pagination.py  test_routes_drawings.py  test_routes_misc.py  test_routes_sponsors.py  test_routes_users.py  test_schemas.py  test_states.py  test_tier.py
