[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fittrack"
version = "0.1.0"
description = "Gamified fitness tracker — earn points from activity, spend on sweepstakes tickets"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "FitTrack Team" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-oracledb>=2.5.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.115.0",
    "polyfactory>=2.18.0",
    "faker>=30.0.0",
    "freezegun>=1.5.0",
    "respx>=0.21.1",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "types-python-dateutil",
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fittrack"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "C4", "UP", "RUF", "SIM", "ARG", "PTH", "RET", "TCH",
    "S",  # bandit security
]
ignore = [
    "S101",  # use of assert (fine in tests)
    "B008",  # function calls in argument defaults (FastAPI Depends pattern)
    "ARG002",  # unused method argument (FastAPI dependency-injected params)
    "ARG001",  # unused function arg (FastAPI exception handler signatures)
    "S104",  # binding to 0.0.0.0 intentional in config
    "S608",  # SQL injection false positive — all queries are parameterized
    "TC001",  # runtime imports in TYPE_CHECKING blocks — deferred for simplicity
    "TC002",  # same
    "TC003",  # same
    "UP046",  # Pydantic Generic[T] — PEP 695 syntax not supported by Pydantic yet
    "SIM105",  # contextlib.suppress — try-except-pass is clearer in migration runner
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ARG", "B017", "E501"]
"scripts/**/*.py" = ["S603", "S607", "S311", "S110", "E501", "B007", "S608"]

[tool.ruff.lint.isort]
known-first-party = ["fittrack"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["polyfactory.*", "oracledb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/fittrack",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
]
markers = [
    "unit: pure unit tests (no DB, no network)",
    "integration: integration tests requiring Oracle Free container",
    "slow: tests that take >5s",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = ["error", "ignore::DeprecationWarning:oracledb.*"]

[tool.coverage.run]
source = ["src/fittrack"]
branch = true
omit = ["*/migrations/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
